src/plugins/platforms/cocoa/qnsview.mm
@@ -1430,8 +1430,12 @@ static QTabletEvent::TabletDevice wacomTabletDevice(NSEvent *theEvent)
 
     if (eventType == QEvent::KeyPress) {
 
-        if (m_composingText.isEmpty())
-            m_sendKeyEvent = !QWindowSystemInterface::tryHandleShortcutEvent(focusWindow, timestamp, keyCode, modifiers, text, [nsevent isARepeat], 1);
+        if (m_composingText.isEmpty()) {
+            QKeyEvent override(QEvent::ShortcutOverride, keyCode, modifiers,
+                nativeScanCode, nativeVirtualKey, nativeModifiers, text, [nsevent isARepeat], 1);
+            override.setTimestamp(timestamp);
+            m_sendKeyEvent = !QWindowSystemInterface::tryHandleShortcutOverrideEvent(focusWindow, &override);
+        }
 
         QObject *fo = QGuiApplication::focusObject();
         if (m_sendKeyEvent && fo) {
